--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="pragma" content="no-cache" />
   <link href="style.css" rel="stylesheet" />
   <script type="text/javascript" src='main.js'></script>
   <title>Typing Tutor: Numpad</title>
